# mimAHP

./: .gitignore  LICENSE  README.md  Readme.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
mimAHP.egg-info/: PKG-INFO  SOURCES.txt
mimahp/: __init__.py  mimahp.py  pairwise.py
src/mimahp/: __init__.py  consistency.py  mimahp.py  weights.py
tests/: test_example.py
