[metadata]
name = mimahp
version = 0.1.5
author = Mutlu ALKAN
author_email = mutlualkan@gmail.com
description = A Python library that enables fast execution of the Analytical Hierarchy Process.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
url = https://github.com/mutlualkan/mimAHP
project_urls =
    Bug Tracker = https://github.com/kullanici/mimAHP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

[options.packages.find]
where = src